# food_db/docs/swagger.json
@@ -330,6 +330,11 @@
         },
         "/ingredients/detect": {
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Upload an image file to detect ingredients",
                 "consumes": [
                     "multipart/form-data"
@@ -347,6 +352,13 @@
                         "description": "Image file",
                         "name": "file",
                         "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "auth",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
